[workspace]
members = [".", "metadata"]

[package]
name = "cargo-compose"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/cargo-contract"
documentation = "https://substrate.dev/substrate-contracts-workshop/#/"
homepage = "https://www.parity.io/"
description = "Setup and deployment tool for developing Wasm based smart contracts via ink!"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["command-line-utilities", "development-tools::build-utils", "development-tools::cargo-plugins"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE", "build.rs", "templates"]

[dependencies]
env_logger = "0.9.0"
anyhow = "1.0.43"
structopt = "0.3.22"
log = "0.4.14"
heck = "0.3.3"
zip = { version = "0.5.13", default-features = false }
parity-wasm = "0.42.2"
cargo_metadata = "0.14.0"
codec = { package = "parity-scale-codec", version = "2.2.0", features = ["derive"] }
which = "4.2.2"
colored = "2.0.0"
toml = "0.5.8"
rustc_version = "0.4.0"
blake2 = "0.9.1"
contract-metadata = { version = "0.3.0", path = "./metadata" }
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde_json = "1.0.66"
tempfile = "3.2.0"
url = { version = "2.2.2", features = ["serde"] }
impl-serde = "0.3.1"
regex = "1.4"

# dependencies for optional extrinsics feature
async-std = { version = "1.9.0", optional = true }
# sp-core = { version = "2.0.1", optional = true }
sp-core = { version = "3.0.0", package = "sp-core", optional = true }
# subxt = { version = "0.15.0", package = "substrate-subxt", optional = true }
# subxt = { git = "https://github.com/paritytech/substrate-subxt", package = "substrate-subxt", optional = true }
subxt = { path = "../substrate-subxt", package = "substrate-subxt", optional = true}
futures = { version = "0.3.16", optional = true }
hex = { version = "0.4.3", optional = true }
# jsonrpsee = { version = "0.3.0", optional = true }
# jsonrpsee-http-client = { version = "0.3.0", optional = true }
# jsonrpsee-proc-macros = { version = "0.3.0", optional = true }
# jsonrpsee-types = { version = "0.3.0", optional = true }
# jsonrpsee-utils = { version = "0.3.0", optional = true }
# jsonrpsee-ws-client = { version = "0.3.0", optional = true }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

[build-dependencies]
anyhow = "1.0.43"
zip = { version = "0.5.13", default-features = false }
walkdir = "2.3.2"
substrate-build-script-utils = "3.0.0"
platforms = "1.1"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "0.7.2"
wabt = "0.10.0"

[features]
default = []

# Enable this for (experimental) commands to deploy, instantiate and call contracts.
#
# Disabled by default
extrinsics = ["sp-core", "subxt", "async-std", "futures", "hex", 
            #   "jsonrpsee", "jsonrpsee-http-client", "jsonrpsee-proc-macros", 
            #   "jsonrpsee-types", "jsonrpsee-utils", "jsonrpsee-ws-client"
              ]

# Enable this to execute long running tests, which usually are only run on the CI server
#
# Disabled by default
test-ci-only = []
